--- a/index.html
+++ b/index.html
@@ -1,2 +1,103 @@
-<canvas></canvas>
-<script src="./script.js"></script>
+<head>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Red container div-->
+  <div style="position: relative; display: inline-block">
+    <!-- Smaller Red Container Div-->
+    <div
+      style="
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        align-items: center;
+        padding: 20px;
+      "
+    >
+      <!-- Player Health-->
+      <div
+        style="
+          position: relative;
+          height: 30px;
+          width: 100%;
+          display: flex;
+          justify-content: flex-end;
+        "
+      >
+        <div style="background-color: yellow; height: 30px; width: 100%"></div>
+        <div
+          id="playerHealth"
+          style="
+            position: absolute;
+            background-color: blue;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+          "
+        ></div>
+      </div>
+      <!-- Timer -->
+      <div
+        id="timer"
+        style="
+          background-color: red;
+          width: 100px;
+          height: 100px;
+          flex-shrink: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 40px;
+        "
+      >
+        10
+      </div>
+      <!-- Enemy Health-->
+      <div style="position: relative; height: 30px; width: 100%">
+        <div style="background-color: yellow; height: 30px"></div>
+        <div
+          id="enemyHealth"
+          style="
+            position: absolute;
+            background-color: blue;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+          "
+        ></div>
+      </div>
+      <div></div>
+    </div>
+    <div
+      id="displayText"
+      style="
+        position: absolute;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: none;
+      "
+    >
+      Tie
+    </div>
+    <canvas></canvas>
+  </div>
+
+  <script src="./js/classes.js"></script>
+  <script src="./index.js"></script>
+</body>
