--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           justify-content: flex-end;
         "
       >
-        <div style="background-color: yellow; height: 30px; width: 100%"></div>
+        <div style="background-color: red; height: 30px; width: 100%"></div>
         <div
           id="playerHealth"
           style="
@@ -63,7 +63,7 @@
       </div>
       <!-- Enemy Health-->
       <div style="position: relative; height: 30px; width: 100%">
-        <div style="background-color: yellow; height: 30px"></div>
+        <div style="background-color: red; height: 30px"></div>
         <div
           id="enemyHealth"
           style="
